--- a/style.css
+++ b/style.css
@@ -263,88 +263,7 @@ body {
   }
   /* footer end */
   
-  /* about me section */
-  .about-header {
-    text-align: center;
-    width: 100%;
-    transition: all 0.5s;
-  }
-  .about-header:hover {
-    color: #e02c6e88;
-  }
-  .about-me {
-    display: flex;
-    justify-content: space-between;
-  }
-  .about-me img {
-    width: 100%;
-    transition: all 0.5s;
-  }
-  .about-right img:hover {
-    transform: scale(1.3);
-    color: red;
-  }
-  .about-right {
-    width: 50%;
-    position: relative;
-  }
-  .about-right ::after {
-    content: "";
-    height: 100%;
-    width: 1px;
-    background: #9de9f09e;
-    position: absolute;
-    top: 0;
-    left: 50%;
-  }
   
-  .about-me p {
-    color: #787885;
-    font-size: 14px;
-  }
-  .about-left img {
-    margin: 0 auto;
-    margin-right: 20%;
-    width: 80%;
-    display: flex;
-  }
-  .bottom-row,
-  .top-row {
-    display: flex;
-  }
-  .margin-left,
-  .margin-right {
-    width: 100%;
-    display: grid;
-    align-content: space-evenly;
-  }
-  .bottom-row {
-    border-top: 1px solid #9de9f09e;
-  }
-  .about-left {
-    width: 40%;
-  }
-  
-  .margin-left {
-    width: 100%;
-  }
-  .margin-right {
-    width: 100%;
-    margin-left: 8%;
-  }
-  .top-row img {
-    width: 90%;
-    margin-top: 12%;
-  }
-  .bottom-row img {
-    width: 100%;
-    float: right;
-    margin-top: 7%;
-  }
-  .mission,
-  .vission {
-    color: #e02c6ea2;
-  }
   /* medial queries */
   @media only screen and (max-width: 688px) {
     .container {
@@ -457,6 +376,9 @@ body {
       display: flex;
       flex-direction: column;
       align-items: center;
+
+
+      
     }
   }
 
@@ -475,3 +397,63 @@ body {
     
     margin-bottom: 50px;
   }
+
+  /* Bonuse section */
+  .bonuse{
+   
+   
+   margin-bottom: 50px;
+   background-color: #92ccfe;
+
+
+  }
+  .bonuse-img{
+      
+  }
+  .bonuse-img{
+      width: 55%;
+      margin-left: 20%;
+      padding-bottom: 10%;
+
+     
+      max-width: 440px;
+animation: zoom-animation 5s linear infinite;
+  animation-play-state: running;
+
+      
+    }
+}
+.bonuse-left{
+    width: 50%;
+    margin-left: 5%;
+    
+    
+}
+.bonuse-left h1{
+    padding-top: 7%;
+}
+.bonuse-right{
+    width: 50%;
+}
+.bonuse-flex{
+    display: flex;
+}
+.bonuse-left ul li{
+    display: block;
+    width: 100%;
+    color: rgb(0, 0, 0);
+    margin-top: 5px;
+}
+.bonuse-left ul li:hover{
+    color: white;
+}
+
+.up-bg{
+    margin-top: 50px;
+height: 80px;
+background-size: contain;
+background-position: top center;
+background-image: url(https://www.elegantthemes.com/layouts/wp-content/uploads/2018/08/hosting-company-02.png),linear-gradient(150deg,#92ccfe 0%,#92ccfe 100%) !important;
+}
+
+
